<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sunny.restaurantapp.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/text_title"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editEmail"
                android:fontFamily="sans-serif"
                android:hint="@string/password_edit_text"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:hint="@string/email_edit_text"
                android:inputType="textEmailAddress" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/buttonGoogleLogIn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/editPassword"
                android:layout_marginTop="66dp"
                tools:layout_editor_absoluteX="-4dp"
                tools:layout_editor_absoluteY="249dp">

            </com.google.android.gms.common.SignInButton>

            <Button
                android:id="@+id/buttonCreateAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonFirebaseSignIn"
                android:text="@string/create_account_button"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/buttonFirebaseSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonGoogleLogIn"
                android:text="@string/signin_button"
                android:textAllCaps="false" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
